# KI-Client

./: .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENCE  Makefile  README.md  installDependencies.sh  sonar-project.properties
.github/workflows/: CI.yml  combine.yml  compile.yml  static-analysis.yml  test.yml
src/: AI.cpp  AI.hpp  AICallback.cpp  AICallback.hpp  AIController.cpp  AIController.hpp  CMakeLists.txt  main.cpp
src/generate/: EquipmentChoice.cpp  EquipmentChoice.hpp  EquipmentChoice_gen.cpp  EquipmentChoice_gen.hpp  GameOperation.cpp  GameOperation.hpp  GameOperation_gen.cpp  GameOperation_gen.hpp  ItemChoice.cpp  ItemChoice.hpp  ItemChoice_gen.cpp  ItemChoice_gen.hpp
src/generate/caro/: EquipmentChoice_caro.cpp  GameOperation_caro.cpp  ItemChoice_caro.cpp  evalFunctions_caro.cpp  evalFunctions_caro.hpp
src/generate/random/: EquipmentChoice.cpp  EquipmentChoice_random.cpp  GameOperation.cpp  GameOperation_random.cpp  ItemChoice.cpp  ItemChoice_random.cpp
src/generate/utils/: ApproachHelpers.cpp  ApproachHelpers.hpp  State_AI.cpp  State_AI.hpp
src/generate/utils/execute/: OperationExecutor.cpp  OperationExecutor.hpp  OperationExecutor_Gadget.cpp  OperationExecutor_Gamble.cpp  OperationExecutor_Movement.cpp  OperationExecutor_Property.cpp  OperationExecutor_Retire.cpp  OperationExecutor_Spy.cpp
src/generate/utils/execute/gadget/: OperationExecutor_BowlerBlade.cpp  OperationExecutor_ChickenFeed.cpp  OperationExecutor_Cocktail.cpp  OperationExecutor_DiamondCollar.cpp  OperationExecutor_FogTin.cpp  OperationExecutor_GasGloss.cpp  OperationExecutor_Grapple.cpp  OperationExecutor_HairDryer.cpp  OperationExecutor_Jetpack.cpp  OperationExecutor_LaserCompact.cpp  OperationExecutor_MirrorOfWilderness.cpp  OperationExecutor_MoleDie.cpp  OperationExecutor_MothballPouch.cpp  OperationExecutor_Nugget.cpp  OperationExecutor_PoisonPills.cpp  OperationExecutor_RocketPen.cpp  OperationExecutor_TechnicolorPrism.cpp  OperationExecutor_WiretapWithEarplugs.cpp
src/generate/utils/execute/property/: OperationExecutor_BangAndBurn.cpp  OperationExecutor_Observation.cpp
src/generate/utils/generate/: OperationGenerator.cpp  OperationGenerator.hpp
src/util/: CLIValidator.hpp  Logging.cpp  Logging.hpp
test/: CMakeLists.txt
